--- a/Meme-maker/index.html
+++ b/Meme-maker/index.html
@@ -77,7 +77,7 @@
     <button id="eraser-btn">Erase</button>
     <input type="file" accept="image/*" id="file" />
     <input type="text" placeholder="Write and then double click" id="text" />
-
+    <button id="save">Save image</button>
     <script src="app.js"></script>
   </body>
 </html>
