--- a/ReactJS-Movie/index.html
+++ b/ReactJS-Movie/index.html
@@ -11,9 +11,17 @@
     const root = document.getElementById("root");
     const span = React.createElement(
       "span",
-      { id: "sexy-span" },
+      { onMouseEnter: () => console.log("mouse enter") },
       "Hello i'm a span"
     );
-    ReactDOM.render(span, root);
+    const btn = React.createElement(
+      "button",
+      {
+        onClick: () => console.log("im clicked"),
+      },
+      "Click me"
+    );
+    const container = React.createElement("div", null, [span, btn]);
+    ReactDOM.render(btn, root);
   </script>
 </html>
