--- a/ReactJS-Movie/index.html
+++ b/ReactJS-Movie/index.html
@@ -9,11 +9,12 @@
   <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
   <script>
     const root = document.getElementById("root");
-    const span = React.createElement(
-      "span",
-      { onMouseEnter: () => console.log("mouse enter") },
-      "Hello i'm a span"
+    const Title = (
+      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+        Hello i'm a title
+      </h3>
     );
+
     const btn = React.createElement(
       "button",
       {
@@ -21,7 +22,12 @@
       },
       "Click me"
     );
-    const container = React.createElement("div", null, [span, btn]);
-    ReactDOM.render(btn, root);
+    const Container = (
+      <div>
+        <Title />
+        <Button />
+      </div>
+    );
+    ReactDOM.render(Container, root);
   </script>
 </html>
