--- a/ReactJS-Movie/index.html
+++ b/ReactJS-Movie/index.html
@@ -9,25 +9,15 @@
   <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
   <script>
     const root = document.getElementById("root");
-    const Title = (
-      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
-        Hello i'm a title
-      </h3>
-    );
 
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("im clicked"),
-      },
-      "Click me"
-    );
-    const Container = (
+    function App() {
+      const [counter, modifier] = React.useState(0);
+
       <div>
-        <Title />
-        <Button />
-      </div>
-    );
-    ReactDOM.render(Container, root);
+        <h3>Total clicks: {counter}</h3>
+        <button>CLick me</button>
+      </div>;
+    }
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
