--- a/ReactJS-Movie/index.html
+++ b/ReactJS-Movie/index.html
@@ -11,13 +11,17 @@
     const root = document.getElementById("root");
 
     function App() {
-      const [counter, modifier] = React.useState(0);
-
-      <div>
-        <h3>Total clicks: {counter}</h3>
-        <button>CLick me</button>
-      </div>;
+      const [counter, setCounter] = React.useState(0);
+      const onClick = () => {
+        setCounter(counter + 1);
+      };
+      return (
+        <div>
+          <h3>Total clicks: {counter}</h3>
+          <button onClick={onClick}>CLick me</button>
+        </div>
+      );
     }
-    ReactDOM.render(<Container />, root);
+    ReactDOM.render(<App />, root);
   </script>
 </html>
